--- a/config.ini
+++ b/config.ini
@@ -34,7 +34,7 @@ sckey =
 # 使用了smtp邮箱推送服务
 # 如果想开启登录二维码邮箱推送，则将 email_enable 设置为 true，默认为 false 不开启邮箱推送
 # 开启消息推送必须填入 email_user、email_pwd，email_host 若不填则会自动判断，email_pwd 如何获取请自行百度。
-email_enable = true
+email_enable = false
 # 邮箱域名 smtp.xx.com
 email_host =smtp.qq.com
 # 邮箱地址 xxxxxxxx@xx.com
